# lemonade-agents

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  pr-agent-review.yml  qodo-merge.yml
src/lemonade_agents/: __init__.py  _base.py
src/lemonade_agents/accounting/: agent.py
src/lemonade_agents/cashier/: agent.py
src/lemonade_agents/helper/: agent.py
src/lemonade_agents/inventory/: agent.py
src/lemonade_agents/marketeer/: agent.py
src/lemonade_agents/reports/: agent.py
src/lemonade_agents/security/: agent.py
src/lemonade_agents/supplier/: agent.py
src/lemonade_agents/web/: __init__.py  app.py
src/lemonade_agents/web/static/: dashboard.html  inventory.html  pos.html
tests/: test_entrypoints.py  test_imports.py
